--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
                         </div>
                 </div>
                 
-                <script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.1/p5.min.js"></script>
-                <script src="sketches/scintillating_grid.js"></script>
-		<script src="sketches/mouse.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.1/addons/p5.dom.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.1/addons/p5.sound.js"></script>
+		<script src="sketches/scintillating_grid.js"></script>
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
 
 		<script>
 
