Added Zollner ilussion in p5js

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<script src="sketches/scintillating_grid.js"></script>
 		<script src="sketches/MullerLyer.js"></script>
 		<script src="sketches/Ebbinghaus.js"></script>
+		<script src="sketches/Zollner.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
