--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<script src="sketches/Ebbinghaus.js"></script>
 		<script src="sketches/Zollner.js"></script>
 		<script src="sketches/MotionBinding.js"></script>
+		<script src="sketches/Anstis.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
