--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<script src="sketches/cafe_wall.js"></script>
 		<script src="sketches/color_gradient.js"></script>
 		<script src="sketches/whites.js"></script>
+		<script src="sketches/watercolor.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
