--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 		<script src="sketches/color_gradient.js"></script>
 		<script src="sketches/whites.js"></script>
 		<script src="sketches/watercolor.js"></script>
+		<script src="sketches/reverse_spoke.js"></script>
+		<script src="sketches/checker.js"></script>
 		<script src="sketches/poggendorff.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
