Lilac Chaser or "Pacman" implemented on P5.js

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		<script src="sketches/whites.js"></script>
 		<script src="sketches/watercolor.js"></script>
 		<script src="sketches/poggendorff.js"></script>
+		<script src="sketches/Pacman.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
