--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				
 				//added by Pierre
 				math: {
-                                        mathjax: 'http://cdn.mathjax.org/mathjax/latest/MathJax.js',
+                                        mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js',
                                         config: 'TeX-AMS_HTML-full'  // See http://docs.mathjax.org/en/latest/config-files.html
                                 },
 
