Adding Imagehack for Ponzo Optical Ilusion - Works with mouse click

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 		<script src="sketches/whites.js"></script>
 		<script src="sketches/watercolor.js"></script>
 		<script src="sketches/poggendorff.js"></script>
+		<script src="sketches/ponzo.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
+
 
 		<script>
 			// More info about config & dependencies:
