Added Mach bands and Penrose triangle on p5.js

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 		<script src="sketches/watercolor.js"></script>
 		<script src="sketches/poggendorff.js"></script>
 		<script src="sketches/ponzo.js"></script>
+		<script src="sketches/MachBands.js"></script>
+		<script src="sketches/PenroseTriangle.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
