--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         </div>
                 </div>
 
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.min.js"></script> 
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/addons/p5.dom.js"></script> 
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/addons/p5.sound.js"></script> 
-    
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/addons/p5.dom.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/addons/p5.sound.js"></script>
+
 		<script src="sketches/IllusorySquare.js"></script>
 		<script src="sketches/scintillating_grid.js"></script>
 		<script src="sketches/MullerLyer.js"></script>
@@ -57,6 +57,10 @@
 		<script src="sketches/checker.js"></script>
 		<script src="sketches/stroboscopicMotion.js"></script>
 		<script src="sketches/rotateSquare.js"></script>
+		<script src="sketches/lilacChaser.js"></script>
+		<script src="sketches/pinna.js"></script>
+		<script src="sketches/silencing.js"></script>
+		<script src="sketches/wagonWheel.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
