Added kinegram visual hack

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<script src="sketches/pinna.js"></script>
 		<script src="sketches/silencing.js"></script>
 		<script src="sketches/wagonWheel.js"></script>
+		<script src="sketches/Kinegram.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
