--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<script src="sketches/MotionBinding.js"></script>
 		<script src="sketches/Footsteps.js"></script>
 		<script src="sketches/cafe_wall.js"></script>
+		<script src="sketches/CheckerBulge.js"></script>
 		<script src="sketches/ColorGradient.js"></script>
 		<script src="sketches/whites.js"></script>
 		<script src="sketches/watercolor.js"></script>
