scintillating global mode

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
                 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 				<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.js"></script>
-				<script src="sketches/scintillating_grid.js"></script>
+				<script src="sketches/scintillating.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
